assets/css/style.css
/* google fonts import */
@import url('https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Lora:ital,wght@0,400..700;1,400..700&display=swap');

/* css variables */

:root {
    --primary-font: "Inter", sans-serif;
    --secondary-font: "Lora", serif;
    --primary-colour: #234F1E; /* pine */
    --primary-colour-transparent: rgba(35,79,30,0.6);
    --secondary-colour: #699E63; /* light pine */
    --primary-background-colour: #F1E9D2; /* parchment */ 
    --highlight: #967B5D; /* coca pecan */
}

/* global styles */

body {
    font-family: var(--primary-font);
    background-color: var(--primary-background-colour);
    color: var(--primary-colour);
}

h1, h2 ,h3 {
    font-family: var(--secondary-font);
}

.btn-style {
    border: 2px solid var(--primary-background-colour);
    background-color: var(--primary-background-colour);
    color: var(--primary-colour);
}

.btn-style:hover {
    border: 2px solid var(--primary-colour);
    background-color: var(--primary-colour);
    color: var(--primary-background-colour);
}

/* navbar styles */

#navbar {
    background-color: var(--primary-background-colour);
    padding: 3px;
}

#navbar #logo {
    width: 40px;
}

#navbar .nav-btn {
    font-family: var(--secondary-font);
    color: var(--primary-colour);
}

#navbar .active {
    text-decoration: underline;
    text-decoration-color: var(--primary-colour);
    text-decoration-thickness: 3px;
}

#navbar ul {
    display: flex;
    justify-content: center;
}


/* home main styles*/

#home-page-header {
    background: url(../images/social-gathering-backgorund.jpg) no-repeat center center/cover;
    min-height: 600px;
    width: 100%;
    position: relative;
}

#cover-text {
    background-color: var(--primary-colour-transparent);
    position: absolute;
    color: var(--primary-background-colour);
    bottom: 25px;
    left: 25px;
    width: 85%;
    min-height: 15px;
    padding-top: 20px;
    padding-left: 10px;
}

#cover-text h2 {
    text-align: left;
}

.section {
    padding: 2rem;
}

#introduction h2 {
    text-align: center;
}

#whats-hot {
    background-color: var(--highlight);
    color: var(--primary-background-colour);
    text-align: center;
}

#whats-hot h5 {
    font-family: var(--secondary-font);
}

/* restaurant styles */

#restaurant-page-header {
    background: url(../images/social-gathering-backgorund.jpg) no-repeat center center/cover;
    min-height: 600px;
    width: 100%;
    position: relative;
}

.card-background {
    max-width: 100%;
}

/* card flipping code taken from W3Schools, also credited in the credit then modifified to fit my theme and purpose */

/* The flip card container - set the width and height to whatever you want. We have added the border property to demonstrate that the flip itself goes out of the box on hover (remove perspective if you don't want the 3D effect */
.flip-card {
  background-color: transparent;
  width: 100%;
  height: 250px;
  border: 1px solid #f1f1f1;
  perspective: 1000px; /* Remove this if you don't want the 3D effect */
}

/* This container is needed to position the front and back side */
.flip-card-inner {
  position: relative;
  width: 100%;
  height: 100%;
  text-align: center;
  transition: transform 0.8s;
  transform-style: preserve-3d;
}

/* Do an horizontal flip when you move the mouse over the flip box container */
.flip-card:hover .flip-card-inner {
  transform: rotateY(180deg);
}

/* Position the front and back side */
.flip-card-front, .flip-card-back {
  position: absolute;
  width: 100%;
  height: 100%;
  -webkit-backface-visibility: hidden; /* Safari */
  backface-visibility: hidden;
}

/* Style the front side (fallback if image is missing) */
.flip-card-front {
  background-color: #bbb;
  color: black;
}

/* Style the back side */
.flip-card-back {
  background-color: var(--primary-colour);
  color: var(--primary-background-colour);
  transform: rotateY(180deg);
}

/* footer */

#footer {
    background-color: var(--primary-colour);
    color: var(--primary-background-colour);
    padding-top: 10px;
}

#footer #footer-name {
    font-family: var(--secondary-font);
}

#socials a {
    color: var(--primary-background-colour);
    font-size: 1.2rem;
    padding-left: 4px;
}



/* media queries */

/* media queries for large or landscape phones (576px or up) */

/* media queries for tablets or larger (768px or up) */

@media screen and (min-width: 768px) {
    /* index main content */
    #cover-text {
        width: 350px;
        left:40px;
    }
}

/* media queries for large tablets (992px or up) */
@media screen and (min-width: 992px) {
    /* size of header picture */
    #home-page-content {
        max-width: 1320px;
    }
}

/* media queries for laptops (1200px or up) */

/* TO BE DELETED - BOOTSTRAP GRID STYLING */

.text-box {
    background-color: grey;
    border: black solid 2px;
}

